Correct an issue with the hyperlinks On the reference element before the links were not visually good, because the flex property was added to it, instead the property text align seems to work much better and does not mess up with the text format at all

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,9 +12,8 @@
 .reference {
     color: white;
     width: 30vw;
-    display: flex;
-    justify-content: center;
     margin-top: auto;
+    text-align: center;
 }
 
 a {
